Criando as telas Home e Cardápio

--- a/meals/templates/meals/estoque/gerenciar_estoque.html
+++ b/meals/templates/meals/estoque/gerenciar_estoque.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock title %}
+{% block title %}Estoque{% endblock title %}
 
 {% block content %}
-    <h1>Home</h1>
+    Teste estoque
 {% endblock content %}
