Criando as telas de gerenciamento do estoque e do cardápio

--- a/meals/templates/meals/cardapio/cardapio.html
+++ b/meals/templates/meals/cardapio/cardapio.html
@@ -4,39 +4,44 @@
 
 {% block content %}
 
-<table class="table table-dark">
-        <h1 style="text-align: center; background-color:rgb(33, 37, 41); color:white; margin-top: 2px;margin-bottom: 0">Cardápio</h1>
+<table class="table table-dark container">
+        <h1 class ='container' style="text-align: center; background-color:rgb(33, 37, 41); color:white; margin-top: 15px;margin-bottom: 0">Cardápio</h1>
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Segunda</th>
-            <th scope="col">Terça</th>
-            <th scope="col">Quarta</th>
-            <th scope="col">Quinta</th>
-            <th scope="col">Sexta</th>
-            <th scope="col">Sábado</th>
+            <th scope="col">Dias da Semana</th>
+            <th scope="col">Prato Principal</th>
+            <th scope="col">Acompanhamento</th>
+            <th scope="col">Sobremesa</th>
+           
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="row">Segunda</th>
+            
           </tr>
           <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
+            <th scope="row">Terça</th>
+           
           </tr>
           <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
+            <th scope="row">Quarta</th>
+            
+          </tr>
+          <tr>
+            <th scope="row">Quinta</th>
+            
+            
+          </tr>
+          <tr>
+            <th scope="row">Sexta</th>
+            
+          </tr>
+          <tr>
+            <th scope="row">Sábado</th>
+            
           </tr>
         </tbody>
-      </table>
+</table>
 
 {% endblock content %}
