--- a/meals/templates/meals/gerenciar_alunos/home.html
+++ b/meals/templates/meals/gerenciar_alunos/home.html
@@ -8,13 +8,13 @@
   <form>
 
       <div class="form-group">
-        <label for="exampleFormControlInput1">RA:</label>
-        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="0000000">
+        <label for="RA">RA:</label>
+        <input type="number" class="form-control" id="RA" placeholder="0000000">
       </div>
 
       <div class="form-group">
-          <label for="exampleFormControlInput1">Nome:</label>
-          <input type="Username" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
+          <label for="Nome">Nome:</label>
+          <input type="Username" class="form-control" id="Nome" placeholder="John Doe">
         </div>
         <br>
         <button class="btn btn-primary" type="submit">Enviar</button>
