Adiciona o admin à barra de menu

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,6 +8,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/">Home</a>
         <a class="nav-item nav-link" href="/cardapio">Cardapio</a>
+        <a class="nav-item nav-link" href="/admin">Painel</a>
         <a class="nav-item nav-link" href="/logout">Sair</a>
       </div>
     </div>
